app/assets/stylesheets/i_reach/admin.css
body {
   margin:0;
   padding:0;
   border:0;
   font-family:Arial, Helvetica, sans-serif;
   font-size:12px;
   background:#fdba59;
}

#top {
  background-image: url('/assets/i_reach/topMid.gif');
  height: 85px;
}

img {
   display: block;
}

.main {	
   font-family: helvetica, arial, sans-serif;
	font-size: 11pt;
	font-weight: normal;
	padding-left: 20px;
	padding-top: 20px;
	padding-right: 10px;
	padding-bottom: 5px; }

#container{
   margin:0;
   padding:0;
   width:100%;
   float:left;
}

h1 {
   font-size: 16pt;
   color: #599c41;
}

#page_content {
  overflow: hidden;
  background-image: url('/assets/i_reach/1midRight.gif');
  background-repeat: repeat-y;
  background-position: right;
  padding: 10px 40px 10px 10px;
  min-height: 300px;
}

/*Content------------------------------------------------*/
#content {
        margin:0; 
        padding:10px 15px 15px 15px;
        clear:both; 
        font-family: Arial, Helvetica, sans-serif;
        border-top: 1px solid #c4c1a8;
}

#content table {
        font-family:Arial, Helvetica, sans-serif;
        font-size: 14px;
}
 
hr {
        margin: 0 0 0 10px;
        width: 620px;
        text-align:center;
        color: #636343;
}


/* tables used as lists ------------------------------*/
table.list {
        margin:10px 0 20px 20px; 
        padding: 0; 
        border-top: 1px solid #599c41;
        border-right: 1px solid #599c41;
        border-left: 1px solid #599c41;
        font-size: 10pt;
	border-collapse: collapse;
}

table.list th {
	background-color: #fef1de;
	border-bottom: 2px solid #599c41;
	padding: 3px 10px 0;
}

table.list td {
        margin:0; 
        padding: 5px 5px 5px; 
        border-bottom: 1px solid #599c41;
}

table.list tr.title {
      font-weight: bold;
      color: #ffffff;
      font-size: 11pt;
      background: #599c41;
      white-space: nowrap;
}

                
/* none of the hover stuff will work in IE 
 * without a proper DOCTYPE declaration.
 * HTML 1.0 Transitional//EN works, as does 
 * XHTML 1.0 Strict//EN 
 */
                
table.list tr.odd {
   background: #d9eabd;
} 
table.list tr.even:hover {
	background: #d9dcd3;
}               

table.list tr.odd:hover {
	background: #e0f2c3;
}

table.list tr.even {
	background: #e2e8d9;
}


/* form labels have different alignment*/
label {font-size: 11pt;
   font-family: helvetica, arial, sans-serif;
   font-weight: bold;
   text-align: right;
   color:#555;
}       

input, select, textarea {
        margin: 6px 0;
        padding: 2px;
        text-align: left; 
        color: #444;
        border: 1px solid #599c41;
        font-size: 10pt;
        background-color: #e2e8d9;
}


/*Input style buttons within table*/


input.button {
    background: #ffd04f;
    background-image: -webkit-linear-gradient(top, #ffd04f, #faeabe);
    background-image: -moz-linear-gradient(top, #ffd04f, #faeabe);
    background-image: -ms-linear-gradient(top, #ffd04f, #faeabe);
    background-image: -o-linear-gradient(top, #ffd04f, #faeabe);
    background-image: linear-gradient(to bottom, #ffd04f, #faeabe);
    -webkit-border-radius: 12;
    -moz-border-radius: 12;
    border-radius: 10px;
    padding: 0 10px;
    border: solid #669421 1px;
    text-decoration: none;
    font-size: 11pt;
    font-weight: bold;
    color: #555;
    margin-right: 10px;
    cursor: pointer; 
}

input.button:hover {
    background: #bafc56;
    background-image: -webkit-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: -moz-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: -ms-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: -o-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: linear-gradient(to bottom, #bafc56, #f7ffeb);
    text-decoration: none;
}

a.button:link, a.button:visited {
/*  background: #a6f038;
    background-image: -webkit-linear-gradient(top, #a6f038, #f4ffe3);
    background-image: -moz-linear-gradient(top, #a6f038, #f4ffe3);
    background-image: -ms-linear-gradient(top, #a6f038, #f4ffe3);
    background-image: -o-linear-gradient(top, #a6f038, #f4ffe3);
    background-image: linear-gradient(to bottom, #a6f038, #f4ffe3);*/
    /* freaky orange background */
    background: #ffd04f;
    background-image: -webkit-linear-gradient(top, #ffd04f, #faeabe);
    background-image: -moz-linear-gradient(top, #ffd04f, #faeabe);
    background-image: -ms-linear-gradient(top, #ffd04f, #faeabe);
    background-image: -o-linear-gradient(top, #ffd04f, #faeabe);
    background-image: linear-gradient(to bottom, #ffd04f, #faeabe);
    -webkit-border-radius: 10;
    -moz-border-radius: 10;
    border-radius: 10px;
    padding: 2px 10px 1px 10px;
    border: solid #669421 1px;
    text-decoration: none; 
    font-size: 11pt;
    font-weight: bold;
    color: #555;
    margin-right: 10px;
    /* do I need this? */
    cursor: pointer; 
}

a.button:hover {
    background: #bafc56;
    background-image: -webkit-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: -moz-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: -ms-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: -o-linear-gradient(top, #bafc56, #f7ffeb);
    background-image: linear-gradient(to bottom, #bafc56, #f7ffeb);
    text-decoration: none;
}

.newsletter_parts_group {
    margin-top: 10px;
    padding: 0 5px 5px 15px;
    border: thin dashed #599c41;
    background-color: #eee;
}

a:link{
	color: #F60;
	text-decoration:none;}

a:visited{
	color:#F60;
	text-decoration:none;}

a:hover{
	color: #efaa45;}

